vemo-app/main/default/objects/Program_Config__c/Program_Config__c.object-meta.xml
<CustomObject>
    <label>Program Config</label>
    <nameField>
        <displayFormat>CONFIG{0}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Configs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>