vemo-app/main/default/objects/Program_Config__c/fields/AssumedAnnualIncomeGrowth__c.field-meta.xml
<CustomField>
    <fullName>AssumedAnnualIncomeGrowth__c</fullName>
    <defaultValue>0.05</defaultValue>
    <label>Assumed Annual Income Growth</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>