vemo-app/main/default/objects/Program_Config__c/fields/InSchoolGraceMonthsDisbursement1__c.field-meta.xml
<CustomField>
    <fullName>InSchoolGraceMonthsDisbursement1__c</fullName>
    <defaultValue>15</defaultValue>
    <label>In-School/Grace Months - Disbursement 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>