vemo-app/main/default/objects/Program_Config__c/fields/InSchoolGraceMonthsDisbursement2__c.field-meta.xml
<CustomField>
    <fullName>InSchoolGraceMonthsDisbursement2__c</fullName>
    <defaultValue>11</defaultValue>
    <label>In-School/Grace Months - Disbursement 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>