vemo-app/main/default/objects/Program_Config__c/fields/PaymentCapFactor__c.field-meta.xml
<CustomField>
    <fullName>PaymentCapFactor__c</fullName>
    <defaultValue>2.5</defaultValue>
    <label>PaymentCapFactor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>